--- a/_config.yml
+++ b/_config.yml
@@ -6,35 +6,39 @@ email: snowball2dev@gmail.com
 description: "关于Java后端 | 这里是 @Snowball 的个人博客，与你一起成长。"
 keyword: "Snowball, SnowballZz, SnowballZz的博客, SnowballZz Blog, 博客, 个人网站, 互联网, Java, 后端"
 url: "https://www.snowballzz.com"              # your host, for absolute URL
-baseurl: ""    
+baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
+# Publish posts or collection documents with a future date.
+future: true
 
 # SNS settings
 RSS: false
 weibo_username:     #
 zhihu_username:     #
 github_username:    #
-#twitter_username:  #
-facebook_username:  #
+twitter_username:   #
+#facebook_username:  #
+#linkedin_username:  firstname-lastname-idxxxx
 
-# Gems
-# from PR#40, to support local preview for Jekyll 3.0
-# gems: [jekyll-paginate]
 
-# 3.x use this config
-plugins: [jekyll-paginate]
 
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 highlighter: rouge
 permalink: pretty
 paginate: 10
-exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
+exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
+# If you have timezone issue (e.g. #68) in China, uncomment to use this:
+#timezone: CN  
 
 
 
-
+# Gems
+# from PR#40, to support local preview for Jekyll 3.0
+# make sure you have this gem installed
+# `$ gem install jekyll-paginate`
+plugins: [jekyll-paginate]
 
 
 
@@ -45,26 +49,30 @@ anchorjs: true                          # if you want to customize anchor. check
 markdown: kramdown
 kramdown:
   input: GFM                            # use Github Flavored Markdown !important
+  syntax_highlighter_opts:
+    span:
+      line_numbers: false
+    block:
+      line_numbers: true
+      start_line: 1
 
 
 
 # Disqus settings
-#disqus_username: _your_disqus_short_name_
+disqus_username: x
 
-# Duoshuo settings
-duoshuo_username: huxblog
-# Share component is depend on Comment so we can NOT use share only.
-duoshuo_share: false                     # set to false if you want to use Comment without Sharing
-
+# Netease settings
+netease_comment: false
 
 
 
 # Analytics settings
-# Baidu Analytics
-#ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
+# Baidu Analytics 
+# ba_track_id: [your track id]
+
 # Google Analytics
-#ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-#ga_domain: huangxuan.me
+ga_track_id: ''            # Format: UA-xxxxxx-xx
+ga_domain: 
 
 
 
@@ -81,13 +89,21 @@ featured-condition-size: 1              # A tag will be featured if the size of 
 
 
 
+# Progressive Web Apps
+chrome-tab-theme-color: "#000000"
+service-worker: true
+
+
+
+# MathJax rendering for layout:page (e.g. post preview)
+page-mathjax: false
+
+
 
 # Friends
 friends: [
-    {
+     {
         title: "",
         href: "#"
     }
 ]
-
-future: true
