--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Snowball Blog
 SEOTitle: 滚雪球Zz的博客
 header-img: img/home-bg-o.jpg
-email: snowball2dev@gmail.com
+email: 295959718@qq.com
 description: "关于Java后端 | 这里是 @Snowball 的个人博客，与你一起成长。"
 keyword: "Snowball, SnowballZz, SnowballZz的博客, SnowballZz Blog, 博客, 个人网站, 互联网, Java, 后端"
 url: "https://www.snowballzz.com"              # your host, for absolute URL
